chore: tidy and simplify payload mapping test
* Parse json into real java object to simplify the tests / assertions
* Use assertj as our preferred assertion library

--- a/build.gradle
+++ b/build.gradle
@@ -262,6 +262,7 @@ dependencies {
     testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
 
     // Testing
+    testImplementation("org.assertj:assertj-core:3.6.1")
     testImplementation platform('org.junit:junit-bom:6.0.0')
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
